<resources>
    <string name="app_name">WeatherAppAndroid</string>

    <!--Common-->
    <string name="no_internet_connection">No internet connection. Try again later.</string>
    <string name="unknown_error">A problem occurred. Try again later.</string>

    <!--Main Screen-->
    <string name="map_menu">Map</string>
    <string name="search_menu">Search</string>

    <!--Rational Dialog-->
    <string name="rational_dialog_title">Location Permission</string>
    <string name="rational_dialog_message">Grant location permission to let us show your place on map.</string>
    <string name="rational_dialog_accept_button">Gran permissions</string>
    <string name="rational_dialog_reject_button">Cancel</string>

    <!--Map-->
    <string name="map_no_location_found_for_coordinates">No location found</string>

    <!--Search-->
    <string name="search_title">Search</string>
    <string name="search_enter_city_hint">Enter city name</string>
    <string name="search_not_found_title">City not found</string>
    <string name="search_not_found_message">City not found, search for another city.</string>
    <string name="search_info_title">Search city</string>
    <string name="search_info_message">Start typing to search your city.</string>
    <string name="search_show_more">Show more</string>
    <string name="search_show_less">Show less</string>
    <string name="search_show_place">Show place on map</string>
    <string name="search_location_type">Location type: %s</string>

    <!--Error View-->
    <string name="error_view_reload">Reload</string>
    <string name="error_view_connection_error_title">Connection Error</string>
    <string name="error_view_connection_error_message">No internet connection. Check your internet connection and click reload.</string>
    <string name="error_view_unknown_error_title">Error occurred</string>
    <string name="error_view_unknown_error_message">Error occurred. Click reload.</string>

    <!--Actual Weather-->
    <string name="actual_weather_details">Details</string>
    <string name="actual_weather_humidity">Humidity</string>
    <string name="actual_weather_visibility">Visibility</string>
    <string name="actual_weather_pressure">Pressure</string>
    <string name="actual_weather_predictability">Predictability</string>
    <string name="actual_weather_forecast">Forecast</string>
    <string name="actual_weather_time_sun">Time and sun</string>
</resources>
